# obs-studio-plugin-unix-socket-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.forgejo/workflows/: tag_release_pkg.yaml
archLinuxPackaging/: .gitignore  PKGBUILD
src/: client.c  common_constants.h  plugin.c  socket.c  socket.h
